--- a/tools/projectServer/CMakeLists.txt
+++ b/tools/projectServer/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(args CONFIG REQUIRED)
 find_package(stduuid CONFIG REQUIRED)
 find_package(plog CONFIG REQUIRED)
 
-add_executable(ProjectServer "main.cpp" "src/ProjectProvider.cpp" "src/ProjectProvider.h" "src/Internals.h")
+add_executable(ProjectServer main.cpp src/ProjectProvider.cpp src/ProjectProvider.h src/Internals.h)
 
 target_link_libraries(ProjectServer
 	PRIVATE
@@ -23,15 +23,13 @@ target_link_libraries(ProjectServer
 		taywee::args
 		stduuid
 		plog::plog
-
 )
 
 target_include_directories(ProjectServer
 	PRIVATE
 		src
-
-
 )
+
 target_compile_definitions(ProjectServer PUBLIC B3D_USE_NLOHMANN_JSON)
 target_compile_features(ProjectServer PUBLIC cxx_std_20 PRIVATE cxx_std_20)
 
@@ -39,4 +37,3 @@ if(MSVC)
 	set(MSVC_CXX_COMPILER_FLAGS "/Zc:__cplusplus")
 	target_compile_options(ProjectServer PUBLIC $<$<COMPILE_LANGUAGE:CXX>:${MSVC_CXX_COMPILER_FLAGS}>)
 endif()
-
