--- a/unityCUDAInterop/actionInterface/CMakeLists.txt
+++ b/unityCUDAInterop/actionInterface/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library(${MODULE_NAME} INTERFACE)
 
 target_include_directories(${MODULE_NAME}
 	INTERFACE
-		"include"
+		include
 )
 
 target_link_libraries(${MODULE_NAME}
