--- a/unityCUDAInterop/logger/CMakeLists.txt
+++ b/unityCUDAInterop/logger/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(UnityCUDAInteropLoggerInterface INTERFACE)
 
 target_include_directories(${MODULE_NAME}
 	INTERFACE
-		"include"
+		include
 )	
 
 target_link_libraries(${MODULE_NAME}
