--- a/unityCUDAInterop/pluginAPI/CMakeLists.txt
+++ b/unityCUDAInterop/pluginAPI/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(UnityCUDAInteropPluginAPI INTERFACE)
 
 target_include_directories(UnityCUDAInteropPluginAPI
     INTERFACE
-        "include"
+        include
 )   
 
 add_library(B3D::UnityCUDAInterop::PluginAPI ALIAS UnityCUDAInteropPluginAPI)
