--- a/unityCUDAInterop/actions/actionFitsNvdbRenderer/CMakeLists.txt
+++ b/unityCUDAInterop/actions/actionFitsNvdbRenderer/CMakeLists.txt
@@ -18,10 +18,7 @@ set_target_properties(${MODULE_NAME} PROPERTIES CXX_STANDARD 20)
 
 set_property(TARGET ${MODULE_NAME} PROPERTY FOLDER "UnityCudaInterop/Actions")
 
-# Unity Samples directory
-# install(TARGETS ${MODULE_NAME} DESTINATION ${UNITY_PROJECT_ROOT_DIR}/Assets/${UNITY_ASSET_SUBDIRECTORY_INTEROP_ACTION_SAMPLES}/${MODULE_NAME})
-# install(TARGETS ${MODULE_NAME} DESTINATION ${UNITY_PROJECT_ROOT_ALT_DIR}/Assets/${UNITY_ASSET_SUBDIRECTORY_INTEROP_ACTION_SAMPLES}/${MODULE_NAME})
-
 # Unity Actions directory
-install(TARGETS ${MODULE_NAME} DESTINATION ${UNITY_PROJECT_ROOT_DIR}/Assets/${UNITY_ASSET_SUBDIRECTORY_INTEROP_ACTIONS}/${MODULE_NAME})
-install(TARGETS ${MODULE_NAME} DESTINATION ${UNITY_PROJECT_ROOT_ALT_DIR}/Assets/${UNITY_ASSET_SUBDIRECTORY_INTEROP_ACTIONS}/${MODULE_NAME})
+if(defined UNITY_PROJECT_ROOT_DIR)
+	install(TARGETS ${MODULE_NAME} DESTINATION ${UNITY_PROJECT_ROOT_DIR}/Assets/${UNITY_ASSET_SUBDIRECTORY_INTEROP_ACTIONS}/${MODULE_NAME})
+endif()
