--- a/unityCUDAInterop/actions/actionFitsNvdbRenderer/CMakeLists.txt
+++ b/unityCUDAInterop/actions/actionFitsNvdbRenderer/CMakeLists.txt
@@ -7,7 +7,7 @@ target_link_libraries(${MODULE_NAME}
 	PRIVATE
 		B3D::UnityCUDAInterop::PluginInterface
 		B3D::UnityCUDAInterop::ActionInterface
-		B3D::Renderer::Library
+		B3D::Renderer::Framework
 		# Replace the next line with the renderer you would like to bring to Unity
 		B3D::Renderer::FitsNvdb
 		B3D::Header::Shared::NvdbRendering
@@ -19,6 +19,6 @@ set_target_properties(${MODULE_NAME} PROPERTIES CXX_STANDARD 20)
 set_property(TARGET ${MODULE_NAME} PROPERTY FOLDER "UnityCudaInterop/Actions")
 
 # Unity Actions directory
-if(defined UNITY_PROJECT_ROOT_DIR)
+if(UNITY_PROJECT_ROOT_DIR)
 	install(TARGETS ${MODULE_NAME} DESTINATION ${UNITY_PROJECT_ROOT_DIR}/Assets/${UNITY_ASSET_SUBDIRECTORY_INTEROP_ACTIONS}/${MODULE_NAME})
 endif()
