Fix CUDA target names

--- a/renderer/fitsNvdb/CMakeLists.txt
+++ b/renderer/fitsNvdb/CMakeLists.txt
@@ -12,8 +12,7 @@ embed_optixir(
 		SamplerMapper.h
 	#DEVICE_DEBUG
 )
-target_compile_options(fitsNvdb-optixir PRIVATE -rdc=true)
-
+target_compile_options(fitsNvdb-optixir_optixir PRIVATE -rdc=true)
 
 set_property(TARGET fitsNvdb-optixir PROPERTY FOLDER "Renderer/PTX Targets")
 set_property(TARGET fitsNvdb-optixir_optixir PROPERTY FOLDER "Renderer/PTX Targets")
@@ -31,9 +30,7 @@ embed_ptx(
 	#DEVICE_DEBUG
 )
 
-
-target_compile_options(fitsNvdb-ptx PRIVATE -rdc=true)
-
+target_compile_options(fitsNvdb-ptx_ptx PRIVATE -rdc=true)
 
 set_property(TARGET fitsNvdb-ptx PROPERTY FOLDER "Renderer/PTX Targets")
 set_property(TARGET fitsNvdb-ptx_ptx PROPERTY FOLDER "Renderer/PTX Targets")
@@ -57,4 +54,3 @@ add_b3d_renderer(
 		Tracy::TracyClient
 		B3D::Header::Shared::NvdbRendering
 )
-
