--- a/renderer/fitsNvdb/CMakeLists.txt
+++ b/renderer/fitsNvdb/CMakeLists.txt
@@ -13,6 +13,8 @@ embed_optixir(
 	#DEVICE_DEBUG
 )
 target_compile_options(fitsNvdb-optixir_optixir PRIVATE -rdc=true)
+target_compile_options(fitsNvdb-optixir_optixir PRIVATE -diag-suppress 1427)
+
 
 set_property(TARGET fitsNvdb-optixir PROPERTY FOLDER "Renderer/PTX Targets")
 set_property(TARGET fitsNvdb-optixir_optixir PROPERTY FOLDER "Renderer/PTX Targets")
@@ -31,6 +33,7 @@ embed_ptx(
 )
 
 target_compile_options(fitsNvdb-ptx_ptx PRIVATE -rdc=true)
+target_compile_options(fitsNvdb-ptx_ptx PRIVATE -diag-suppress 1427)
 
 set_property(TARGET fitsNvdb-ptx PROPERTY FOLDER "Renderer/PTX Targets")
 set_property(TARGET fitsNvdb-ptx_ptx PROPERTY FOLDER "Renderer/PTX Targets")
